syntax = "proto3";

service JWTManager {
    rpc GenerateFreshAccessToken(UserData) returns (Token) {}
    rpc GenerateAccessAndRefreshToken(UserData) returns (AccessAndRefreshToken) {}
    rpc GenerateAccessAndRefreshTokenBasedOnRefreshToken(Token) returns (AccessAndRefreshToken) {}
    rpc ValidateFreshAccessToken(Token) returns (Claims) {}
    rpc ValidateToken(Token) returns (Claims) {}
}

message UserData {
    string userIdentity = 1;
    repeated string scopes = 2;
}

message Token {
    string token = 3;
    string error = 12;
}

message AccessAndRefreshToken {
    string acccessToken = 4;
    string refreshToken = 5;
    string error = 6;
}

message TokenValid {
    bool valid = 7;
}

message Claims {
    UserData userData = 8;
    double creationUTC = 9;
    double expirationUTC = 10;
    bool valid = 11;
    string error = 13;
}